# chic-rust

./: Cargo.toml  LICENSE  README.md  index.html
src/: engine.rs.backup  engine_alpha_beta.rs  engine_minmax.rs  main.rs
src/chess_board/: fen.rs  mod.rs  zobrist_hash.rs
src/chess_boards/: mod.rs  perft.rs
src/chess_boards/chess_board/: chess_board.rs  fen.rs  mod.rs  model.rs  move_generation.rs  test_utils.rs  zobrist_hash.rs
src/engines/: engine_alpha_beta.rs  engine_minmax.rs  mod.rs  uci.rs
src/ui/: mod.rs
ui/: appwindow.slint
