[package]
name = "chic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.9.1"
lazy_static = "1.5.0"
clap = { version = "4.5.26", features = ["cargo"] }
tabled = "0.17.0"
rand = "0.8"
rand_pcg = "0.3"
circular-buffer = "0.1.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
web-time = "1.1.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[build-dependencies]
slint-build = "1.9.1"
